--- a/main-2.html
+++ b/main-2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Ini Halaman Index</title>
+        <title>YOK BELAJAR</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <link rel="stylesheet" type="text/css" href="css/main-2.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -29,8 +29,8 @@
         <section class="home" id="1">
             <div class="container">
                 <div class="row">
-                    <img src="img/logo.png" class="mx-auto d-block wow fadeInLeftBig animated animated">
-                    <h1 class="heading-1">Ini Adalah Halaman Web</h1>
+                    <img src="img/logo%20yok%20belajar.png" class="mx-auto d-block wow fadeInLeftBig animated animated">
+                    <h1 class="heading-1">YOK BELAJAR</h1>
                 </div>
             </div>
         </section>
@@ -40,13 +40,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8">
-                        <h2 class="heading-2 wow fadeInLeftBig animated animated">Deskripsi Singkat</h2>
+                        <h2 class="heading-2 wow fadeInLeftBig animated animated">Apa itu Yok Belajar?</h2>
                         <h3 class="heading-3">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            Yok Belajar merupakan website pembelajaran yang menyenangkan bagi anak-anak. Dengan belajar di Yok Belajar, anak-anak diharapkan agar lebih mudah memhami pembelajaran dan dapat mengaplikasikannya dalam kehidupan sehari-hari.
                         </h3>
                     </div>
                     <div class="col-md-4">
-                        <img src="img/logo.png" width="200px" class="wow fadeInRightBig animated animated">
+                        <img src="img/logo%20yok%20belajar.png" width="200px" class="wow fadeInRightBig animated animated">
                     </div>
                 </div>
             </div>
@@ -57,33 +57,33 @@
         <section class="content2" id="3">
             <div class="container">
                 <div class="row">
-                    <h1 class="heading-1" style="text-align:center">Contoh 3 Kolom</h1>
+                    <h1 class="heading-1" style="text-align:center">Apa saja yang akan dipelajari di Yok Belajar?</h1>
                 </div>
                 <div class="row">
                     <div class="col-md-4" style="margin-top:20px;">
                         <div class="col-border">
                             <i class="fas fa-home fa-3x heading-1"></i>
-                            <h2 class="heading-2">kolom 1</h2>
+                            <h2 class="heading-2">Membaca</h2>
                             <h3 class="heading-3" style="text-align:left;margin:20px 10px;color:#fff;">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry kol 1
+                                Anak-anak diharapkan agar dapat membaca kata-kata atau kalimat dengan benar
                             </h3>
                         </div>
                     </div>
                     <div class="col-md-4" style="margin-top:20px;">
                         <div class="col-border">
                             <i class="fas fa-home fa-3x heading-1"></i>
-                            <h2 class="heading-2">kolom 2</h2>
+                            <h2 class="heading-2">Menghitung</h2>
                             <h3 class="heading-3" style="text-align:left;margin:20px 10px;color:#fff;">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry kol 1
+                                Anak-anak diharapkan agar dapat menghitung soal matematika dasar dengan benar
                             </h3>
                         </div>
                     </div>
                     <div class="col-md-4 wow flipInX animated animated" style="margin-top:20px;">
                         <div class="col-border">
                             <i class="fas fa-home fa-3x heading-1"></i>
-                            <h2 class="heading-2">kolom 3</h2>
+                            <h2 class="heading-2">Berbicara</h2>
                             <h3 class="heading-3" style="text-align:left;margin:20px 10px;color:#fff;">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry kol 1
+                                Anak-anak diharapkan agar dapat mengucapkan kata-kata atau kalimat dengan benar
                             </h3>
                         </div>
                     </div>
